syntax = "proto3";

//option java_multiple_files = true;
option java_package = "com.yuqi.praft";
option java_outer_classname = "DdlProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;


message CreateTableRequest {
  string table_name = 1;
}

message CreateTableResponse {
  int32 code = 1;
}

service DdlService {
  rpc createTable(CreateTableRequest)
      returns(CreateTableResponse);
}